traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: not found: value PositionFinale
  while (PositionFinale() == false){
         ^